workspace/log/build_2023-10-09_20-10-08/template_drone_control/stderr.log
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In constructor ‘TemplateDroneControl::TemplateDroneControl()’:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:49:115: error: cannot convert ‘std::shared_ptr<mavros_msgs::srv::CommandBool_Request_<std::allocator<void> > >’ to ‘const rmw_client_t*’
   49 |         auto result_arm = arming_client_>rmw_send_request(std::make_shared<mavros_msgs::srv::CommandBool::Request>(set_armed));
      |                                                           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~
      |                                                                                                                   |
      |                                                                                                                   std::shared_ptr<mavros_msgs::srv::CommandBool_Request_<std::allocator<void> > >
In file included from /opt/ros/foxy/include/rcl/timer.h:31,
                 from /opt/ros/foxy/include/rcl/wait.h:31,
                 from /opt/ros/foxy/include/rclcpp/executor.hpp:30,
                 from /opt/ros/foxy/include/rclcpp/executors/multi_threaded_executor.hpp:26,
                 from /opt/ros/foxy/include/rclcpp/executors.hpp:21,
                 from /opt/ros/foxy/include/rclcpp/rclcpp.hpp:146,
                 from /home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:1:
/opt/ros/foxy/include/rmw/rmw.h:1930:24: note:   initializing argument 1 of ‘rmw_ret_t rmw_send_request(const rmw_client_t*, const void*, int64_t*)’
 1930 |   const rmw_client_t * client,
      |   ~~~~~~~~~~~~~~~~~~~~~^~~~~~
make[2]: *** [CMakeFiles/template_drone_control_node.dir/build.make:63: CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:105: CMakeFiles/template_drone_control_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
